// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalContainer /> snapshot should match snapshot 1`] = `
<ModalContainer
  aria-label="some modal"
>
  <div
    aria-label="some modal"
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={false}
    data-round={0}
    role="dialog"
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with aria-modal 1`] = `
<ModalContainer
  aria-label="some modal"
  aria-modal={false}
>
  <div
    aria-label="some modal"
    aria-modal={false}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={false}
    data-round={0}
    role="dialog"
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with arrow 1`] = `
<ModalContainer
  aria-label="some modal"
  showArrow={true}
>
  <div
    aria-label="some modal"
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={false}
    data-round={0}
    role="dialog"
  >
    <div
      className="md-modal-container-arrow-wrapper"
      data-popper-arrow={true}
      id="arrow"
    >
      <ModalArrow
        color="primary"
      >
        <svg
          aria-hidden="true"
          className="md-modal-arrow-svg"
          data-placement="auto"
          height={24}
          viewBox="0 0 12 24"
          width={12}
          xmlns="http://www.w3.org/svg/2000"
        >
          <defs>
            <clipPath
              id="modal-arrow-cut-stroke-auto"
            >
              <path
                d="m  l  q   l "
              />
            </clipPath>
          </defs>
          <path
            clipPath="url(#modal-arrow-cut-stroke-auto)"
            d="m  l  q   l "
            data-color="primary"
          />
        </svg>
      </ModalArrow>
    </div>
  </div>
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with arrowId 1`] = `
<ModalContainer
  aria-label="some modal"
  arrowId="example-id"
>
  <div
    aria-label="some modal"
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={false}
    data-round={0}
    role="dialog"
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with children 1`] = `
<ModalContainer
  aria-label="some modal"
>
  <div
    aria-label="some modal"
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={false}
    data-round={0}
    role="dialog"
  >
    <div>
      Example Text
    </div>
  </div>
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with className 1`] = `
<ModalContainer
  aria-label="some modal"
  className="example-class"
>
  <div
    aria-label="some modal"
    aria-modal={true}
    className="example-class md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={false}
    data-round={0}
    role="dialog"
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with color 1`] = `
<ModalContainer
  aria-label="some modal"
  color="quaternary"
>
  <div
    aria-label="some modal"
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="quaternary"
    data-elevation={0}
    data-padded={false}
    data-round={0}
    role="dialog"
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with elevation 1`] = `
<ModalContainer
  aria-label="some modal"
  elevation={8}
>
  <div
    aria-label="some modal"
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={8}
    data-padded={false}
    data-round={0}
    role="dialog"
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with focusLockProps 1`] = `
<ModalContainer
  aria-label="some modal"
  focusLockProps={
    Object {
      "restoreFocus": true,
    }
  }
>
  <FocusScope
    autoFocus={true}
    contain={true}
    restoreFocus={true}
  >
    <span
      data-focus-scope-start={true}
      hidden={true}
    />
    <div
      aria-label="some modal"
      aria-modal={true}
      className="md-modal-container-wrapper"
      data-color="primary"
      data-elevation={0}
      data-padded={false}
      data-round={0}
      role="dialog"
    />
    <span
      data-focus-scope-end={true}
      hidden={true}
    />
  </FocusScope>
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with id 1`] = `
<ModalContainer
  aria-label="some modal"
  id="example-id"
>
  <div
    aria-label="some modal"
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={false}
    data-round={0}
    id="example-id"
    role="dialog"
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with isPadded 1`] = `
<ModalContainer
  aria-label="some modal"
  isPadded={true}
>
  <div
    aria-label="some modal"
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={true}
    data-round={0}
    role="dialog"
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with radius 1`] = `
<ModalContainer
  aria-label="some modal"
  round={150}
>
  <div
    aria-label="some modal"
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={false}
    data-round={150}
    role="dialog"
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with role 1`] = `
<ModalContainer
  aria-label="some modal"
  role="tooltip"
>
  <div
    aria-label="some modal"
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={false}
    data-round={0}
    role="tooltip"
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with style 1`] = `
<ModalContainer
  aria-label="some modal"
  style={
    Object {
      "color": "pink",
    }
  }
>
  <div
    aria-label="some modal"
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={false}
    data-round={0}
    role="dialog"
    style={
      Object {
        "color": "pink",
      }
    }
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with title 1`] = `
<ModalContainer
  title="some title"
>
  <div
    aria-label="some title"
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-padded={false}
    data-round={0}
    role="dialog"
  >
    <div
      className="md-modal-container-title"
    >
      <Text
        className="md-modal-container-title"
        id="test-ID"
        tagName="h2"
        type="title"
      >
        <Text
          className="md-text-wrapper md-modal-container-title"
          id="test-ID"
          tagname="h2"
          type="heading-small-medium"
        >
          <mdc-text
            class="md-text-wrapper md-modal-container-title"
            suppressHydrationWarning={true}
          >
            some title
          </mdc-text>
        </Text>
      </Text>
    </div>
  </div>
</ModalContainer>
`;
